<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile"
        android:icon="@mipmap/personal"
        android:title="@string/profile" />
    <item
        android:id="@+id/bank"
        android:icon="@mipmap/bank"
        android:title="@string/bank" />
    <item
        android:id="@+id/qualification"
        android:icon="@mipmap/qualification"
        android:title="@string/qualification"/>
    <item
        android:id="@+id/certification"
        android:icon="@mipmap/certification"
        android:title="@string/certification" />
    <item
        android:id="@+id/dependent"
        android:icon="@mipmap/dependent"
        android:title="@string/dependent"/>
</menu>